--- a/app/speedbible/sideReader.css
+++ b/app/speedbible/sideReader.css
@@ -118,6 +118,10 @@
     transform: scale(1.3);
     z-index:10;
 }
+.singleWord:active{
+    transition: transform 0.1s ease, opacity 0.4s ease;
+    transform: scale(1.1);
+}
 
 
 @keyframes fadeInUp {
